--- a/less/index.less
+++ b/less/index.less
@@ -1,9 +1,19 @@
-@import "reset.less";
-@import "global.less";
+//resets and globals
+@import 'reset.less';
+@import 'global.less';
 
-@import "variables.less";
-@import "mixins.less";
+//variables and mixins
 
-@import "header.less";
-@import "body.less";
-@import "footer.less";
+@import 'variables.less';
+@import 'mixins.less';
+
+//files for components
+
+@import 'modal.less';
+@import 'navbar.less';
+@import 'index-main.less';
+@import 'footer.less';
+
+//breakpoint files
+@import 'tablet.less';
+@import 'desktop.less';
