--- a/less/variables.less
+++ b/less/variables.less
@@ -1,4 +1,8 @@
 @main-color: #fff;
 @font-color: #000;
 @button-color: #060;
+@border-color: #046604;
 
+@tablet: ~'(min-width: 700px)';
+
+@max-width: 1200px;
