--- a/css/index.css
+++ b/css/index.css
@@ -126,6 +126,10 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+body {
+  margin: 0 auto;
+  max-width: 1200px;
+}
 a {
   text-decoration: none;
   color: #000;
@@ -133,11 +137,295 @@ a {
 a:hover {
   transform: scale(1.1);
 }
-header nav {
+.row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-content: center;
+  align-items: center;
+  margin: 0.75rem;
+}
+.row h1 {
+  font-size: 1.75rem;
+}
+main {
+  position: relative;
+  top: 3.5rem;
+}
+.login-box {
+  visibility: hidden;
+  position: absolute;
+  z-index: 1200;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 30rem;
+  max-width: 100vw;
+  height: 30rem;
+  max-height: 100vh;
+  padding: 2rem;
+  background: rgba(0, 0, 0, 0.8);
+  box-sizing: border-box;
+  box-shadow: 0 1.5rem 25rem rgba(0, 0, 0, 0.5);
+  border-radius: 1rem;
+}
+.login-box h2 {
+  color: #fff;
+  margin: 0 0 3rem;
+  padding: 0;
+  text-align: left;
+  font-size: 1.5rem;
+}
+.login-box .input-box {
+  position: relative;
+}
+.login-box .input-box input {
+  width: 100%;
+  padding-bottom: 1rem;
+  font-size: 1.6rem;
+  color: #fff;
+  margin-bottom: 3rem;
+  border: none;
+  border-bottom: 3px dotted #fff;
+  outline: none;
+  background: transparent;
+}
+.login-box .input-box input:focus ~ label,
+.login-box .input-box input:valid ~ label {
+  top: -3rem;
+  left: 0px;
+  color: #fff;
+  font-size: 1.5rem;
+}
+.login-box .input-box label {
+  position: absolute;
+  font-size: 1.6rem;
+  padding: 1.6rem;
+  top: 0;
+  left: 0;
+  padding: 1rem 0;
+  color: #fff;
+  transition: 0.5s;
+}
+.login-box .modal-menu-btn {
+  position: absolute;
+  z-index: 1100;
+  right: 2rem;
+  top: 2rem;
+  cursor: pointer;
+  transition: all 1s ease-in-out;
+}
+.login-box .modal-menu-btn .btn-line {
+  width: 1.8rem;
+  height: 2px;
+  margin: none;
+  margin-bottom: 0.5rem;
+  background: #fff;
+  transform: translate(0rem, -0.5rem);
+}
+.login-box .modal-menu-btn .btn-line:nth-child(1) {
+  transform: rotate(45deg) translate(0.1rem, 0rem);
+}
+.login-box .modal-menu-btn .btn-line:nth-child(2) {
+  transform: rotate(-45deg) translate(0.4rem, -6px);
+}
+.login-box .menu {
+  visibility: hidden;
+}
+.login-box .menu .menu-nav {
+  background: white;
+  border-bottom: 1px solid #046604;
+  transform: translate3d(0, 0, 0);
+}
+.login-box ul {
   display: flex;
   flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
 }
-header nav a {
-  padding: 1rem 0;
+.login-box ul li {
+  padding: 1.25rem 3rem;
+}
+.login-box .show {
+  visibility: visible;
+}
+.login-box.show {
+  visibility: visible;
+}
+.login-box input[type='submit'] {
+  color: #fff;
+  font-size: 1.2rem;
+  border: none;
+  outline: none;
+  padding: 0.25rem 2rem;
+  border-radius: 0.5rem;
+  background: transparent;
+  background: #060;
+}
+body {
+  background: #fff;
+}
+header {
+  position: fixed;
+  z-index: 1000;
+  width: 100%;
+  max-width: inherit;
+  height: 3rem;
+  background: white;
+  border-bottom: 3px dotted #046604;
+}
+header .menu-btn {
+  z-index: 1100;
+  cursor: pointer;
+  transition: all 1s ease-in-out;
+}
+header .menu-btn .btn-line {
+  width: 1.8rem;
+  height: 2px;
+  margin: none;
+  margin-bottom: 0.5rem;
+  background: #000;
+}
+header .menu-btn.close .btn-line:nth-child(1) {
+  transform: rotate(45deg) translate(0.1rem, 0rem);
+}
+header .menu-btn.close .btn-line:nth-child(2) {
+  display: none;
+}
+header .menu-btn.close .btn-line:nth-child(3) {
+  transform: rotate(-45deg) translate(0.4rem, -6px);
+}
+header .menu {
+  visibility: hidden;
+}
+header .menu .menu-nav {
+  background: white;
+  border-bottom: 1px solid #046604;
+  transform: translate3d(0, 0, 0);
+}
+header .menu .menu-nav .nav-item {
+  font-size: 1.5rem;
+}
+header .menu .menu-nav .nav-item.current {
+  display: none;
+}
+header ul {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+header ul li {
+  padding: 1.25rem 3rem;
+}
+header .show {
+  visibility: visible;
+}
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.full-width {
+  height: 80vh;
+  background: linear-gradient(rgba(255, 255, 255, 0.7), rgba(140, 100, 255, 0.2)), url(../img/abstractSmall.png);
+  background-size: cover;
+  padding: 5vh;
+}
+.full-width section {
+  opacity: 90;
   text-align: center;
+}
+.full-width section h1 {
+  color: #fff;
+  font-size: 3rem;
+}
+.full-width section h2 {
+  color: #fff;
+  font-size: 2rem;
+}
+.card-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  height: 90vh;
+  border: 2px #fff solid;
+}
+.card-box .card-header h2 {
+  font-size: 1.5rem;
+  background: #000;
+  color: #fff;
+  padding: 1rem;
+  opacity: 0.7;
+  border-radius: 0.5rem;
+}
+.card-box .card-body {
+  margin: 0.5rem;
+  text-align: justify;
+  font-size: 1.2rem;
+  background: #fff;
+  padding: 1rem;
+  opacity: 0.8;
+  border-radius: 0.5rem;
+}
+.card-box .card-text {
+  color: #000;
+}
+.card-box .card-footer a {
+  font-size: 1.25rem;
+  padding: 1rem 2rem;
+  color: #fff;
+  background-color: #000;
+  border-radius: 0.5rem;
+  opacity: 0.7;
+}
+.card-box .card-footer a:hover {
+  background-color: #fff;
+  color: #000;
+}
+.single-card .card-box {
+  color: #fff;
+  background: url("../img/pen-paper.png");
+  background-size: cover;
+}
+.discover {
+  background: url("../img/discover.png");
+  background-size: cover;
+}
+.form {
+  background: url("../img/form.png");
+  background-size: cover;
+}
+.design {
+  background: url("../img/design.png");
+  background-size: cover;
+}
+@media (min-width: 700px) {
+  .menu-nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-content: center;
+  }
+  main article {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: flex-start;
+  }
+  main .full-width {
+    height: 50vh;
+  }
+  main .single-card .card-box {
+    height: 45vh;
+  }
+  main .multi-card {
+    justify-content: space-between;
+  }
+  main .multi-card .card-box {
+    width: 33%;
+    height: 50vh;
+  }
 }
