changed some files to make it easier to merge between teams

--- a/less/index.less
+++ b/less/index.less
@@ -1,19 +1,17 @@
 //resets and globals
-@import 'reset.less';
-@import 'global.less';
+@import 'index-reset.less';
+@import 'index-global.less';
 
 //variables and mixins
 
-@import 'variables.less';
-@import 'mixins.less';
+@import 'index-variables.less';
+@import 'index-mixins.less';
 
 //files for components
 
 @import 'modal.less';
 @import 'navbar.less';
 @import 'index-main.less';
-@import 'footer.less';
 
 //breakpoint files
-@import 'tablet.less';
-@import 'desktop.less';
+@import 'index-tablet.less';
