--- a/css/index.css
+++ b/css/index.css
@@ -274,6 +274,14 @@ header {
   background: white;
   border-bottom: 3px dotted #046604;
 }
+header nav {
+  display: flex;
+  flex-direction: column;
+}
+header nav a {
+  padding: 1rem 0;
+  text-align: center;
+}
 header .menu-btn {
   z-index: 1100;
   cursor: pointer;
