--- a/less/navbar.less
+++ b/less/navbar.less
@@ -2,7 +2,7 @@ body {
   background: @main-color;
 }
 
-header {
+header{
   position: fixed;
   z-index: 1000;
   width: 100%;
@@ -10,6 +10,16 @@ header {
   height: 3rem;
   background: white;
   border-bottom: 3px dotted @border-color;
+  
+  nav{
+    display: flex;
+    flex-direction: column;
+    a{
+      padding: 1rem 0;
+      text-align: center;
+    }
+  }
+  
   .menu-btn {
     z-index: 1100;
     cursor: pointer;
