--- a/less/global.less
+++ b/less/global.less
@@ -39,4 +39,24 @@
   //   width: 100%;
   //   margin: 0 auto;
   // }
+
+  a {
+    text-decoration: none;
+    color: @font-color;
+    &:hover {
+      transform: scale(1.1);
+    }
+  }
+
+  .row {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-content: center;
+    align-items: center;
+    margin: 0.75rem;
+    h1 {
+      font-size: 1.75rem;
+    }
+  }
   
