--- a/css/about.css
+++ b/css/about.css
@@ -160,6 +160,24 @@ img {
   max-width: 100%;
   height: auto;
 }
+a {
+  text-decoration: none;
+  color: #000;
+}
+a:hover {
+  transform: scale(1.1);
+}
+.row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-content: center;
+  align-items: center;
+  margin: 0.75rem;
+}
+.row h1 {
+  font-size: 1.75rem;
+}
 .btn {
   width: 70%;
   border-radius: 5%;
@@ -192,7 +210,7 @@ body {
 header {
   position: fixed;
   z-index: 1000;
-  width: 100%;
+  width: 100vw;
   max-width: inherit;
   height: 3rem;
   background: white;
@@ -252,6 +270,116 @@ header ul li {
 }
 header .show {
   visibility: visible;
+}
+.login-box {
+  visibility: hidden;
+  position: absolute;
+  z-index: 1200;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 30rem;
+  max-width: 100vw;
+  height: 30rem;
+  max-height: 100vh;
+  padding: 2rem;
+  background: rgba(0, 0, 0, 0.8);
+  box-sizing: border-box;
+  box-shadow: 0 1.5rem 25rem rgba(0, 0, 0, 0.5);
+  border-radius: 1rem;
+}
+.login-box h2 {
+  color: #fff;
+  margin: 0 0 3rem;
+  padding: 0;
+  text-align: left;
+  font-size: 1.5rem;
+}
+.login-box .input-box {
+  position: relative;
+}
+.login-box .input-box input {
+  width: 100%;
+  padding-bottom: 1rem;
+  font-size: 1.6rem;
+  color: #fff;
+  margin-bottom: 3rem;
+  border: none;
+  border-bottom: 3px dotted #fff;
+  outline: none;
+  background: transparent;
+}
+.login-box .input-box input:focus ~ label,
+.login-box .input-box input:valid ~ label {
+  top: -3rem;
+  left: 0px;
+  color: #fff;
+  font-size: 1.5rem;
+}
+.login-box .input-box label {
+  position: absolute;
+  font-size: 1.6rem;
+  padding: 1.6rem;
+  top: 0;
+  left: 0;
+  padding: 1rem 0;
+  color: #fff;
+  transition: 0.5s;
+}
+.login-box .modal-menu-btn {
+  position: absolute;
+  z-index: 1100;
+  right: 2rem;
+  top: 2rem;
+  cursor: pointer;
+  transition: all 1s ease-in-out;
+}
+.login-box .modal-menu-btn .btn-line {
+  width: 1.8rem;
+  height: 2px;
+  margin: none;
+  margin-bottom: 0.5rem;
+  background: #fff;
+  transform: translate(0rem, -0.5rem);
+}
+.login-box .modal-menu-btn .btn-line:nth-child(1) {
+  transform: rotate(45deg) translate(0.1rem, 0rem);
+}
+.login-box .modal-menu-btn .btn-line:nth-child(2) {
+  transform: rotate(-45deg) translate(0.4rem, -6px);
+}
+.login-box .menu {
+  visibility: hidden;
+}
+.login-box .menu .menu-nav {
+  background: white;
+  border-bottom: 1px solid #046604;
+  transform: translate3d(0, 0, 0);
+}
+.login-box ul {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+.login-box ul li {
+  padding: 1.25rem 3rem;
+}
+.login-box .show {
+  visibility: visible;
+}
+.login-box.show {
+  visibility: visible;
+}
+.login-box input[type='submit'] {
+  color: #fff;
+  font-size: 1.2rem;
+  border: none;
+  outline: none;
+  padding: 0.25rem 2rem;
+  border-radius: 0.5rem;
+  background: transparent;
+  background: #060;
 }
 .about-section {
   width: 90%;
@@ -571,4 +699,12 @@ fa-user:hover {
   background: silver;
   padding-bottom: 3%;
   margin-top: 3%;
+}
+@media (min-width: 700px) {
+  .menu-nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-content: center;
+  }
 }
