--- a/less/navbar.less
+++ b/less/navbar.less
@@ -5,7 +5,7 @@ body {
 header{
   position: fixed;
   z-index: 1000;
-  width: 100%;
+  width: 100vw;
   max-width: inherit;
   height: 3rem;
   background: white;
